Correct overflow issues

--- a/static/checkout.css
+++ b/static/checkout.css
@@ -60,8 +60,7 @@ svg {
   align-content: start;
   display: grid;
   grid-auto-columns: 1fr;
-  height: 100vh;
-  margin-bottom: 120px;
+  height: 100%;
   padding: 20px 30px;
 }
 .order {
@@ -72,7 +71,7 @@ svg {
   white-space: nowrap;
 }
 .order:last-child {
-  margin-bottom: 90px;
+  margin-bottom: 50px;
 }
 .collected {
   display: inline-block;
